mongo-cluster/mongo-db.yml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      automountServiceAccountToken: false
      containers:
      - name: mongodb
        image: mongo:latest
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
            ephemeral-storage: "1Gi"
          limits:
            cpu: "250m"
            memory: "512Mi"
            ephemeral-storage: "2Gi"
        ports:
        - containerPort: 27017
