mongo-cluster/mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      automountServiceAccountToken: false
      containers:
      - name: mongo-express
        image: mongo-express:1.0.0
        ports:
        - containerPort: 8081
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
            ephemeral-storage: "1Gi"
          limits:
            cpu: "250m"
            memory: "256Mi"
            ephemeral-storage: "2Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  # Making the pod or service accessible outside the cluster
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 30000 # Optional: Only include this if you want a specific node port.
