mongo-cluster/mongo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-express-ingress
spec:
  rules:
  - host: mongo-express.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: mongo-express-service
          servicePort: 8081
